--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,10 @@ url: "https://yinkouya.github.io/"
 
 gems:
   - jemoji
-  
+
+# github pages and jekyll local use different setting for emoji!
+gems: ["emoji_for_jekyll"]
+
 encoding: "utf-8"
 highlighter: rouge
 future: true
