--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 baseurl: /yinkouya.github.io
 
 # Site settings
-title: Weiya
-author: Weiya
-description: "Going to put some lyrics here cos obvisouly I can't write anything. Love emoji :love_letter:"
+title: kouya
+author: kouya
+description: "building a personal blog using Jekyll on GitHub"
 url: "https://yinkouya.github.io/"
 
 gems:
