--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
+baseurl: /
+url: http://yinkouya.github.io
+
 gems:
   - jemoji
 
@@ -8,6 +11,6 @@ encoding: "utf-8"
 highlighter: rouge
 future: true
 
-url: "http://yinkouya.github.io" # the base hostname & protocol for your site
-baseurl: "" # the subpath of your site, e.g. /blog/
+#url: "http://yinkouya.github.io" # the base hostname & protocol for your site
+#baseurl: "" # the subpath of your site, e.g. /blog/
 
