--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-baseurl: /
 url: http://yinkouya.github.io
+baseurl: ""
 
 gems:
   - jemoji
@@ -11,6 +11,4 @@ encoding: "utf-8"
 highlighter: rouge
 future: true
 
-#url: "http://yinkouya.github.io" # the base hostname & protocol for your site
-#baseurl: "" # the subpath of your site, e.g. /blog/
 
